--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -108,7 +108,7 @@
             <div class="col">
               <canvas id="camera-canvas"></canvas>
             </div>
-           
+
           </div>
         </div>
       </div>
@@ -118,8 +118,8 @@
   </div>
 
 
-  <link href="/css/introHCI.css" rel="stylesheet">
-  <script src="/js/googlemaps.js"></script>
+  <link rel="stylesheet" href="/css/introHCI.css">
+  <script src="js/googleMaps.js"></script>
   {{> googleMaps}}
 </body>
 </html>
